kubernetes/frontend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  revisionHistoryLimit: 15 
  # Стратегия развёртывания. Recreate — удалит сначала все старые Pod'ы 
  # Есть и более гибкая стратегии, например, RollingUpdate, которая будет обновлять Pod'ы порциями  
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - image: gitlab.praktikum-services.ru:5050/std-013-60/momo-store/momo-frontend:latest
        name: frontend
        imagePullPolicy: Always
        ports:
        - containerPort: 1080
        volumeMounts:
        - name: nginx-conf
          mountPath: /etc/nginx/conf.d/
          
      volumes:
        - name: nginx-conf
          configMap:
            name: nginx-conf
            items:
              - key: nginx.conf
                path: default.conf
      imagePullSecrets:
      - name: docker-config-secret
